@@ -62,8 +62,15 @@ class drawGame {
         scene.add(wallGrid4);
     }
 
+    adjustCameraPosition(camera) {
+        camera.position.set(this.widthUnit * 3/2, this.depthUnit * 15, this.heightUnit * 3/2);
+        camera.rotation.set(-Math.PI/2, 0, 0);
+    }
 }
 
+////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////
 
 function WallGrid( size, x, y, color ) {
 
